# spielwiese

./: .gitignore  .lintrc  Makefile  golden-rose.clj  io.rb  kreisfläche.rb  nbd.hs  output  prep.py  prime.py  primetest.rb  primzahlentest.py  readme  readme.mkd  run
able/: test.py
advent/: .gitignore  03.hs  04.hs  07.hs  08.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  21.hs
advent15/: .gitignore  01.hs  02.hs  05.hs  06.hs  09.hs  10.hs  11.hs  13.hs  15.hs  16.hs  18.hs  20.hs
advent16/: 01.hs  02.hs  03.hs  04.hs  05.py  06.hs  07.hs  09.hs  12.py  14.py  16.hs  8.py
advent17/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs
advent2017/: 01.hs
advent22/: Cargo.toml  README.md
alt-scripting/: README.md  echo-clojure  echo-haskell  echo-python
astar/: Main.hs  Makefile  astar.cabal  maze1.cabal  run  run.hs  runhs
c/: binarytest.c  binarytree.c  binarytree.h  code.c  doppler.c  echo.c  engine.c  gol.h  gol_test.c  hello world  hello world.c  ptr.c  recursion.c  rot13.c  sphere.c  test_binarytree.c  test_gol.c
cBTree/: binarytree.h  binarytree_test.c  readme.mkd
cBall/: Makefile  readme.mkd  test.c
cBreakout/: Makefile  breakout.c
cCryptoCat/: bcmoo.h  cc.c  cc_cbc.c  cc_ecb.c  xor.h
cFizzBuzz/: fb.c
cGol/: Makefile  gol.h  gol_test.c  readme.mkd
cHexclock/: Makefile  hexclock.c
cIRC/: Makefile  ir.c
cList/: Makefile  list.c  list.h  list_test.c
cOneDimension/: Makefile  onedimension.c  readme.mkd
cSchemeTester/: Makefile  schemetester.c
cToast/: readme.mkd  toast.c
cUtil/: Makefile  dict.h  hamming.c  list.h  list_test.c  rts.c
cVtop/: Makefile  vtop.c
closeio/: gen.py  req.sh
cpp/: circle.cpp  echo.cpp
dBTree/: README.mkd  btree.d
dFizzBuzz/: fb.d
eatstuff/: index.html
fiveinanhour/: five.py  four.py  one.py  three.py  two.py
game/: rando.lisp
goBench/: goBench.go
hCodec/: Video.hs
hDnD/: Test.hs
hEuler/: 001-multiples-of-3-and-5.hs  002-even-fibonacci-numbers.hs  003-largest-prime-factor.hs  004-largest-palindrome-product.hs  005-smallest-multiple.hs  005.hs  006-sum-square-difference.hs  007-10001st-prime.hs  008-largest-product-in-a-series.hs  009-special-pythagorean-triplet.hs  010-summation-of-primes.hs  011-largest-product-in-a-grid.hs  (+36 more)
hLight/: LICENSE  Light.cabal  Light.hs  example.hs
hMarkdown/: Markdown.hs  markdown.cabal  markdown.hs
texttwist/: Main.hs  texttwist.cabal  words
(+143 files in other folders)
