name:                Light
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Light
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010

executable example
  main-is:             example.hs
  build-depends:       base >=4.8 && <4.9
                     , Light
  default-language:    Haskell2010

