name:                simple-markdown-text-parser
version:             0.1.0.0
synopsis:            Stupid markdown parser, learning project only
description:         Please see README.md
homepage:            http://github.com/sulami/spielwiese/tree/master/hMarkdown
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Markdown
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sulami/spielwiese
