name:                texttwist
version:             0.1.0.0
synopsis:            RPG GM Story Management Tool
description:         Please see README.md
homepage:            https://github.com/sulami/texttwist
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

executable         texttwist
    if flag(library-only)
        Buildable: False

    main-is:           Main.hs
    hs-source-dirs:    .
    build-depends:     base, ansi-terminal, random
    default-language:  Haskell2010

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/sulami/texttwist

